# KNN-K_Means-Visualization

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto-release.yml  greetings.yml  pre-commit.yml
assets/: banner.txt
src/: __init__.py  constants.py
src/GUI/: __init__.py
src/GUI/coordinate_system/: clusters.py  coordinate_system.py  points.py
src/GUI/screen/: __init__.py  app.py  button.py  form_frame.py  home_page.py  main_page.py  start_button.py
src/utils/: __init__.py  average_coordinate.py  cal_mahattan_distance.py
