[project]
name = "KNN-K_Means-Visualization"
version = "0.1.0"
description = "Project for practicing in CS115(UIT Code Subject)"
authors = [{ name = "NTGNguyen", email = "nguyen80339@gmail.com" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
